Changed the app theme. Only the main activity has an action bar. Now we can add custom toolbars to the other activities.

--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_firebase_login.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_firebase_login.xml
@@ -69,7 +69,7 @@
             <Button
                 android:id="@+id/resetPasswordBtn"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:layout_marginTop="20dip"
                 android:background="@null"
                 android:text="@string/btn_forgot_password"
@@ -80,7 +80,7 @@
             <Button
                 android:id="@+id/signupBtn"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="29dp"
                 android:layout_marginTop="20dip"
                 android:background="@null"
                 android:text="@string/btn_link_to_register"
@@ -88,7 +88,17 @@
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="@dimen/btn_text_size" />
 
+            <Button
+                android:id="@+id/backBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@null"
+                android:text="@string/btn_back"
+                android:textColor="@color/colorAccent" />
+
         </LinearLayout>
 
     </android.support.design.widget.CoordinatorLayout>
+
 </ScrollView>
