--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/styles.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/styles.xml
@@ -1,7 +1,10 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="CustomToolbarStyle" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="CustomToolbarStyle" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
 
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -9,9 +12,6 @@
         <!-- Status bar color -->
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowActionBar">false</item>
     </style>
 
     <style name="CustomToolbarStyle.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
