--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_fire_base_register.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_fire_base_register.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".activities.FireBaseRegisterActivity">
+    tools:context=".authentication.firebase.FireBaseRegisterActivity">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
