--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_add_plant.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_add_plant.xml
@@ -17,7 +17,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
-        android:text="Hello User! You have not selected a plant yet :("
+        android:text="@string/addplant"
         android:textAllCaps="false"
         android:textSize="30sp"
         android:textStyle="bold"
