--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/add_plant_screen_toolbar.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/add_plant_screen_toolbar.xml
@@ -12,19 +12,22 @@
     app:contentInsetRight="0dp"
     app:contentInsetEnd="0dp">
 
-    <!--<ImageView
-        android:contentDescription="@string/app_name"
+    <ImageButton
+        android:id="@+id/btn_back"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:adjustViewBounds="true"
-        android:src="@mipmap/ic_launcher"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="7dp"
         android:layout_marginStart="7dp"
-        android:layout_marginLeft="7dp" /> -->
+        android:adjustViewBounds="true"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/app_name"
+        android:cropToPadding="false"
+        app:srcCompat="@drawable/" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_plant"
+        android:text="@string/add_plants"
         android:textSize="@dimen/toolbar_title_size"
         android:textColor="@color/colorWhite"
         android:layout_marginStart="10dp"
