--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_add_plant_menu.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_add_plant_menu.xml
@@ -6,7 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".activities.AddPlantMenuActivity">
 
+    <include
+        android:id="+@id/addPlantMenuToolbar"
+        layout="@layout/add_plant_screen_toolbar"
+        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />
+
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -20,9 +29,11 @@
             android:id="@+id/searchview"
             android:layout_width="315dp"
             android:layout_height="44dp"
+            android:layout_above="@+id/database_list_view"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="94dp"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/rounded_edit_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +48,7 @@
             android:layout_height="402dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="57dp"
+            android:layout_marginBottom="44dp"
             android:divider="@color/colorPrimary"
             android:dividerHeight="1.5dp"
             app:layout_constraintBottom_toBottomOf="parent"
