--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_add_plant_menu.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_add_plant_menu.xml
@@ -7,11 +7,25 @@
     tools:context=".activities.AddPlantMenuActivity">
 
     <include
+        android:id="@+id/addPlantMenuToolbar"
         layout="@layout/add_plant_screen_toolbar"
         app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/relativeLayout" />
+
+    <View
+        android:id="@+id/toolbar_shadow"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/toolbar_drop_shadow"
+        app:layout_constraintBottom_toTopOf="@+id/searchview"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addPlantMenuToolbar"
+        app:layout_constraintVertical_bias="0.0" />
 
     <android.support.v7.widget.SearchView
         android:id="@+id/searchview"
@@ -43,9 +57,11 @@
             android:id="@+id/database_list_view"
             android:layout_width="310dp"
             android:layout_height="334dp"
+            android:layout_alignParentTop="true"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="96dp"
+            android:layout_marginTop="177dp"
+            android:layout_marginBottom="81dp"
             android:divider="@color/colorPrimary"
             android:dividerHeight="1.5dp"
             app:layout_constraintBottom_toBottomOf="parent"
