--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/add_plant_screen_toolbar.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/add_plant_screen_toolbar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.AppBarLayout
+<android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="70dp"
@@ -11,10 +11,6 @@
     app:contentInsetRight="0dp"
     app:contentInsetEnd="0dp">
 
-    <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="67dp">
-
         <ImageButton
             android:id="@+id/btn_cancel"
             android:layout_width="wrap_content"
@@ -25,20 +21,13 @@
             android:cropToPadding="false"
             app:srcCompat="@drawable/ic_cancel" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_plants"
-        android:textSize="@dimen/toolbar_title_size"
-        android:textColor="@color/colorWhite"
-        android:layout_marginStart="10dp" />
-    </android.support.v7.widget.Toolbar>
+        <TextView
+            android:id="@+id/text_view_add_plants"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="@string/add_plants"
+            android:textColor="@color/colorWhite"
+            android:textSize="@dimen/toolbar_title_size" />
 
-    <View
-
-        android:id="@+id/toolbar_shadow"
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:background="@drawable/toolbar_drop_shadow" />
-
-</android.support.design.widget.AppBarLayout>
+</android.support.v7.widget.Toolbar>
