--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/dimens.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/dimens.xml
@@ -6,13 +6,13 @@
 
     <!-- Font size -->
     <dimen name="btn_text_size">15sp</dimen>
-    <dimen name="medium_text_size">20sp</dimen>
+    <dimen name="plant_title_text_size">21sp</dimen>
     <dimen name="small_text_size">16sp</dimen>
     <dimen name="header_text_size">32sp</dimen>
     <dimen name="normal_text_size">18sp</dimen>
     <dimen name="search_view_text_size">16sp</dimen>
     <dimen name="hamburger_menu_text_size">20sp</dimen>
-    <dimen name="plant_description_text_size">14sp</dimen>
+    <dimen name="plant_description_text_size">7sp</dimen>
 
     <!-- Toolbar margins -->
     <dimen name="toolbar_title_size">20sp</dimen>
