--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_plant.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_plant.xml
@@ -38,7 +38,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <android.support.constraint.ConstraintLayout
-            android:layout_width="338dp"
+            android:layout_width="339dp"
             android:layout_height="492dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
@@ -71,7 +71,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/plant_circle_image5"
                 app:layout_constraintStart_toStartOf="@+id/plant_circle_image5"
                 app:layout_constraintTop_toTopOf="@+id/plant_circle_image5"
-                app:srcCompat="@drawable/cactus" />
+                app:srcCompat="@drawable/flowerpot" />
 
             <TextView
                 android:id="@+id/plant_circle_image5"
@@ -181,8 +181,6 @@
                 android:layout_width="338dp"
                 android:layout_height="188dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/rounded_frame"
                 android:elevation="-1dp"
@@ -190,7 +188,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.138">
+                app:layout_constraintVertical_bias="0.0">
 
             </FrameLayout>
 
@@ -207,8 +205,10 @@
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
                 app:layout_constraintEnd_toStartOf="@+id/progressBar"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/frameLayout"
                 app:layout_constraintTop_toBottomOf="@+id/plant_circle_image5"
+                app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@drawable/ic_play_circle_filled_black_24dp" />
 
             <ImageButton
@@ -238,10 +238,9 @@
                 android:elevation="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.325"
+                app:layout_constraintHorizontal_bias="0.197"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.816"
                 app:srcCompat="@drawable/ic_error_black_24dp" />
 
             <TextView
