--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_plant.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_plant.xml
@@ -39,8 +39,8 @@
         app:layout_constraintVertical_bias="0.0">
 
         <android.support.constraint.ConstraintLayout
-            android:layout_width="339dp"
-            android:layout_height="492dp"
+            android:layout_width="338dp"
+            android:layout_height="536dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="23dp">
@@ -49,10 +49,10 @@
                 android:id="@+id/plant_circle_image"
                 android:layout_width="102dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/plant_white_circle"
                 android:text=""
                 app:layout_constraintBottom_toTopOf="@+id/progressBar"
@@ -64,10 +64,10 @@
                 android:id="@+id/imageViewPlant"
                 android:layout_width="65dp"
                 android:layout_height="82dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="@+id/plant_circle_image5"
                 app:layout_constraintEnd_toEndOf="@+id/plant_circle_image5"
                 app:layout_constraintStart_toStartOf="@+id/plant_circle_image5"
@@ -78,10 +78,10 @@
                 android:id="@+id/plant_circle_image5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/plant_circle"
                 android:text=""
                 app:layout_constraintBottom_toTopOf="@+id/progressBar"
@@ -95,10 +95,10 @@
                 android:id="@+id/linearLayout"
                 android:layout_width="159dp"
                 android:layout_height="105dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toTopOf="@+id/progressBar"
                 app:layout_constraintEnd_toEndOf="@+id/frameLayout"
@@ -109,8 +109,8 @@
                     android:id="@+id/text_plant_data"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
                     android:layout_below="@+id/progressBar"
+                    android:layout_alignParentEnd="true"
                     android:gravity="start"
                     android:text=""
                     android:textColor="@color/colorPrimary"
@@ -123,8 +123,8 @@
                     android:id="@+id/text_plant_health"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignStart="@+id/text_plant_data"
                     android:layout_below="@+id/text_plant_data"
+                    android:layout_alignStart="@+id/text_plant_data"
                     android:textColor="@color/colorPrimary"
                     android:textSize="@dimen/plant_description_text_size"
                     tools:layout_editor_absoluteX="164dp"
@@ -135,8 +135,8 @@
                     android:id="@+id/text_plant_harvest_time_start"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignStart="@+id/text_plant_data"
                     android:layout_below="@+id/text_plant_health"
+                    android:layout_alignStart="@+id/text_plant_data"
                     android:text=""
                     android:textColor="@color/colorPrimary"
                     android:textSize="@dimen/plant_description_text_size"
@@ -148,8 +148,8 @@
                     android:id="@+id/text_plant_harvest_time_left"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignStart="@+id/text_plant_data"
                     android:layout_below="@+id/text_plant_harvest_time_start"
+                    android:layout_alignStart="@+id/text_plant_data"
                     android:text=""
                     android:textColor="@color/colorPrimary"
                     android:textSize="@dimen/plant_description_text_size"
@@ -164,10 +164,10 @@
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="222dp"
                 android:layout_height="36dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:progressDrawable="@drawable/custom_progressbar"
                 app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
                 app:layout_constraintEnd_toEndOf="@+id/frameLayout"
@@ -179,7 +179,8 @@
             <FrameLayout
                 android:id="@+id/frameLayout"
                 android:layout_width="338dp"
-                android:layout_height="188dp"
+                android:layout_height="175dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/rounded_frame"
                 android:elevation="-1dp"
@@ -196,12 +197,12 @@
                 android:id="@+id/img_btn_start_harvest"
                 android:layout_width="43dp"
                 android:layout_height="39dp"
-                android:layout_alignParentEnd="true"
                 android:layout_alignTop="@+id/img_btn_reset_harvest"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_alignParentEnd="true"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
                 app:layout_constraintEnd_toStartOf="@+id/progressBar"
@@ -216,10 +217,10 @@
                 android:layout_width="43dp"
                 android:layout_height="39dp"
                 android:layout_alignParentEnd="true"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
                 app:layout_constraintEnd_toEndOf="@+id/frameLayout"
@@ -231,14 +232,14 @@
                 android:id="@+id/water_alert"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:elevation="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.146"
+                app:layout_constraintHorizontal_bias="0.205"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_error_black_24dp" />
@@ -247,10 +248,10 @@
                 android:id="@+id/light_alert"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:elevation="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -263,13 +264,13 @@
                 android:id="@+id/temp_alert"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginBottom="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:elevation="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.946"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_error_black_24dp" />
@@ -278,26 +279,26 @@
                 android:id="@+id/water_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/water_circle"
                 android:text=""
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.064"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.606" />
+                app:layout_constraintVertical_bias="0.607" />
 
             <ImageView
                 android:id="@+id/water_icon_img"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="@+id/water_icon"
                 app:layout_constraintEnd_toEndOf="@+id/water_icon"
                 app:layout_constraintStart_toStartOf="@+id/water_icon"
@@ -308,10 +309,10 @@
                 android:id="@+id/light_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/light_circle"
                 android:text=""
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -324,10 +325,10 @@
                 android:id="@+id/light_icon_img"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="@+id/light_icon"
                 app:layout_constraintEnd_toEndOf="@+id/light_icon"
                 app:layout_constraintStart_toStartOf="@+id/light_icon"
@@ -338,26 +339,27 @@
                 android:id="@+id/temp_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/temp_circle"
                 android:text=""
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.966"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.606" />
+                app:layout_constraintTop_toTopOf="@+id/frameLayout"
+                app:layout_constraintVertical_bias="0.6" />
 
             <ImageView
                 android:id="@+id/temp_icon_img"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="@+id/temp_icon"
                 app:layout_constraintEnd_toEndOf="@+id/temp_icon"
                 app:layout_constraintStart_toStartOf="@+id/temp_icon"
