--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/drawable-mdpi/red_circle.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/drawable-mdpi/red_circle.xml
@@ -1,9 +1,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/colorWhite" />
+    <solid android:color="@color/colorRed" />
 
     <size
-        android:height="100dp"
-        android:width="100dp" />
+        android:height="82dp"
+        android:width="82dp" />
+
 </shape>
