--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/dimens.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_horizontal_margin">0dp</dimen>
@@ -17,5 +17,9 @@
 
     <!-- Toolbar margins -->
     <dimen name="toolbar_title_size">20sp</dimen>
+
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="design_fab_image_size" tools:override="true">56dp</dimen>
 
 </resources>
