--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_my_friend.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_my_friend.xml
@@ -26,21 +26,6 @@
         app:layout_constraintTop_toBottomOf="@+id/profileToolbar"
         app:layout_constraintVertical_bias="0.0" />
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
 
             <ImageView
                 android:id="@+id/imageView3"
@@ -101,7 +86,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:contentDescription="@string/app_name"
-                android:src="@drawable/userpicture"
+                android:src="@drawable/faces_2"
                 app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
                 app:layout_constraintEnd_toEndOf="@+id/frameLayout"
                 app:layout_constraintHorizontal_bias="0.032"
@@ -231,8 +216,4 @@
                 app:layout_constraintVertical_bias="1.0">
 
             </FrameLayout>-->
-
-        </android.support.constraint.ConstraintLayout>
-    </RelativeLayout>
-
 </android.support.constraint.ConstraintLayout>
