--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_add_friend.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_add_friend.xml
@@ -38,7 +38,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/textView5"
                 app:layout_constraintStart_toStartOf="@+id/textView5"
                 app:layout_constraintTop_toTopOf="@+id/textView5"
-                app:srcCompat="@drawable/ic_add_black_24dp" />
+                app:srcCompat="@drawable/ic_add_white_24dp" />
 
             <TextView
                 android:id="@+id/btn_add_friend_text"
@@ -85,7 +85,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:contentDescription="@string/app_name"
-                android:src="@drawable/userpicture"
+                android:src="@drawable/faces_5"
                 app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
                 app:layout_constraintEnd_toEndOf="@+id/frameLayout"
                 app:layout_constraintHorizontal_bias="0.032"
@@ -119,7 +119,7 @@
                     android:textSize="@dimen/plant_title_text_size"
                     tools:layout_editor_absoluteX="164dp"
                     tools:layout_editor_absoluteY="49dp"
-                    tools:text="Jane Doodle" />
+                    tools:text="Yasmin Gaile" />
 
                 <TextView
                     android:id="@+id/experience"
