--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/fragment_my_milestones.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/fragment_my_milestones.xml
@@ -10,26 +10,28 @@
         android:id="@+id/fab2"
         android:layout_width="74dp"
         android:layout_height="74dp"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_gravity="end|bottom"
-        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:src="@drawable/ic_add_white_24dp"
         app:backgroundTint="@color/colorPrimary"
         app:fabCustomSize="74dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.937"
+        app:layout_constraintHorizontal_bias="0.972"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.983" />
+        app:layout_constraintVertical_bias="0.89" />
 
     <ScrollView
+        android:id="@+id/scrollView4"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,9 +50,9 @@
                     android:id="@+id/post_title"
                     android:layout_width="262dp"
                     android:layout_height="31dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
                     android:text="Finally harvested my coriander"
                     android:textSize="@dimen/normal_text_size"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -65,9 +67,9 @@
                     android:id="@+id/post_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
                     android:text="December 20th, 2018"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -81,10 +83,10 @@
                     android:id="@+id/imageViewPlant2"
                     android:layout_width="54dp"
                     android:layout_height="66dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="@+id/plant_circle_image6"
                     app:layout_constraintEnd_toEndOf="@+id/plant_circle_image6"
                     app:layout_constraintStart_toStartOf="@+id/plant_circle_image6"
@@ -96,8 +98,8 @@
                     android:id="@+id/plant_circle_image6"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
                     android:background="@drawable/green_circle"
                     android:text=""
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -112,10 +114,10 @@
                     android:id="@+id/imageView10"
                     android:layout_width="348dp"
                     android:layout_height="188dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
                     android:background="@drawable/coriander_background_milestones"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -134,19 +136,19 @@
                     android:textColor="@color/colorDarkRed"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/imageView10"
-                    app:layout_constraintHorizontal_bias="0.905"
+                    app:layout_constraintHorizontal_bias="0.952"
                     app:layout_constraintStart_toStartOf="@+id/imageView10"
                     app:layout_constraintTop_toTopOf="@+id/imageView10"
-                    app:layout_constraintVertical_bias="1.0"
+                    app:layout_constraintVertical_bias="0.951"
                     tools:ignore="DuplicateIds" />
 
                 <ImageView
                     android:id="@+id/like_icon2"
                     android:layout_width="29dp"
                     android:layout_height="29dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
                     android:src="@drawable/ic_favorite_black_24dp"
                     app:layout_constraintBottom_toBottomOf="@+id/likes2"
                     app:layout_constraintEnd_toEndOf="@+id/likes2"
@@ -160,8 +162,8 @@
                     android:id="@+id/textView9"
                     android:layout_width="48dp"
                     android:layout_height="29dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
                     android:gravity="center"
                     android:text="15"
                     android:textColor="@color/colorDarkRed"
@@ -182,9 +184,9 @@
                     android:id="@+id/post_title"
                     android:layout_width="262dp"
                     android:layout_height="49dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
                     android:text="My strawberries started sprouting"
                     android:textSize="@dimen/normal_text_size"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -199,9 +201,9 @@
                     android:id="@+id/post_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
                     android:text="November 27th, 2018"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -215,10 +217,10 @@
                     android:id="@+id/imageViewPlant2"
                     android:layout_width="54dp"
                     android:layout_height="66dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="@+id/plant_circle_image6"
                     app:layout_constraintEnd_toEndOf="@+id/plant_circle_image6"
                     app:layout_constraintStart_toStartOf="@+id/plant_circle_image6"
@@ -230,8 +232,8 @@
                     android:id="@+id/plant_circle_image6"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
                     android:background="@drawable/green_circle"
                     android:text=""
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -246,10 +248,10 @@
                     android:id="@+id/imageView10"
                     android:layout_width="348dp"
                     android:layout_height="188dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
                     android:background="@drawable/coriander_background_milestones"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -268,19 +270,19 @@
                     android:textColor="@color/colorDarkRed"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/imageView10"
-                    app:layout_constraintHorizontal_bias="0.905"
+                    app:layout_constraintHorizontal_bias="0.952"
                     app:layout_constraintStart_toStartOf="@+id/imageView10"
                     app:layout_constraintTop_toTopOf="@+id/imageView10"
-                    app:layout_constraintVertical_bias="1.0"
+                    app:layout_constraintVertical_bias="0.951"
                     tools:ignore="DuplicateIds" />
 
                 <ImageView
                     android:id="@+id/like_icon2"
                     android:layout_width="29dp"
                     android:layout_height="29dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
                     android:src="@drawable/ic_favorite_black_24dp"
                     app:layout_constraintBottom_toBottomOf="@+id/likes2"
                     app:layout_constraintEnd_toEndOf="@+id/likes2"
@@ -294,8 +296,8 @@
                     android:id="@+id/textView9"
                     android:layout_width="48dp"
                     android:layout_height="29dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
                     android:gravity="center"
                     android:text="15"
                     android:textColor="@color/colorDarkRed"
