--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/fragment_my_milestones.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/fragment_my_milestones.xml
@@ -91,7 +91,7 @@
                     app:layout_constraintEnd_toEndOf="@+id/plant_circle_image6"
                     app:layout_constraintStart_toStartOf="@+id/plant_circle_image6"
                     app:layout_constraintTop_toTopOf="@+id/plant_circle_image6"
-                    app:srcCompat="@drawable/flowerpot"
+                    app:srcCompat="@drawable/strawberry"
                     tools:ignore="DuplicateIds" />
 
                 <TextView
@@ -225,7 +225,7 @@
                     app:layout_constraintEnd_toEndOf="@+id/plant_circle_image6"
                     app:layout_constraintStart_toStartOf="@+id/plant_circle_image6"
                     app:layout_constraintTop_toTopOf="@+id/plant_circle_image6"
-                    app:srcCompat="@drawable/flowerpot"
+                    app:srcCompat="@drawable/coriander"
                     tools:ignore="DuplicateIds" />
 
                 <TextView
